--- a/config/yugabyte/regression_pipelines/foreign_key/postgres/FK_G2_varyingFKnumbers_parent_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/postgres/FK_G2_varyingFKnumbers_parent_operations.yaml
@@ -34,6 +34,10 @@ microbenchmark:
 
             - create table employees_with_1_fk(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(10,2), project_id int not null);
             - create table employees_with_2_fk_1_parent(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(10,2), project_uid1 int not null, project_uid2 int not null);
+
+            - CREATE INDEX project_uid_index ON employees_with_1_fk (project_id);
+            - CREATE INDEX project_uid1_index ON employees_with_2_fk_1_parent (project_uid1);
+            - CREATE INDEX project_uid2_index ON employees_with_2_fk_1_parent (project_uid2);
         cleanup:
             - DROP TABLE IF EXISTS employees_with_1_fk;
             - DROP TABLE IF EXISTS employees_with_2_fk_1_parent;
@@ -171,9 +175,9 @@ microbenchmark:
             
         executeRules:
 
-            - workload: FK_G2_1_parent_no-fk_update
+            - workload: FK_G4_1_parent_no-fk_update
               run:
-                  - name: FK_G2_1_parent_no-fk_update
+                  - name: FK_G4_1_parent_no-fk_update
                     weight: 100
                     queries:
                         - query: update projects_without_ref set uid=uid+100000 where id=?;
@@ -181,9 +185,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G2_2_parent_no-fk_delete
+            - workload: FK_G4_2_parent_no-fk_delete
               run:
-                  - name: FK_G2_2_parent_no-fk_delete
+                  - name: FK_G4_2_parent_no-fk_delete
                     weight: 100
                     queries:
                         - query: delete from projects_without_ref where id=?;
@@ -191,9 +195,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G2_3_parent_1-fk_update
+            - workload: FK_G4_3_parent_1-fk_update
               run:
-                  - name: FK_G2_3_parent_1-fk_update
+                  - name: FK_G4_3_parent_1-fk_update
                     weight: 100
                     queries:
                         - query: update projects_with_1_ref set uid=uid+100000 where id=?;
@@ -201,9 +205,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G2_4_parent_1-fk_delete
+            - workload: FK_G4_4_parent_1-fk_delete
               run:
-                  - name: FK_G2_4_parent_1-fk_delete
+                  - name: FK_G4_4_parent_1-fk_delete
                     weight: 100
                     queries:
                         - query: delete from projects_with_1_ref where id=?;
@@ -211,9 +215,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G2_5_parent_2-fk_1-child_update
+            - workload: FK_G4_5_parent_2-fk_1-child_update
               run:
-                  - name: FK_G2_5_parent_2-fk_1-child_update
+                  - name: FK_G4_5_parent_2-fk_1-child_update
                     weight: 100
                     queries:
                         - query: update projects_with_2_ref_1_child set uid1=uid1+100000, uid2=uid2+100000 where id=?;
@@ -221,9 +225,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G2_6_parent_2-fk_1-child_delete
+            - workload: FK_G4_6_parent_2-fk_1-child_delete
               run:
-                  - name: FK_G2_6_parent_2-fk_1-child_delete
+                  - name: FK_G4_6_parent_2-fk_1-child_delete
                     weight: 100
                     queries:
                         - query: delete from projects_with_2_ref_1_child where id=?;
