--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G1_impact_of_partitioning.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G1_impact_of_partitioning.yaml
@@ -97,7 +97,7 @@ microbenchmark:
                   - name: select_without_part
                     weight: 100
                     queries:
-                        - query: SELECT * FROM projects_with_part where dept=?;
+                        - query: SELECT * FROM projects_without_part where dept=?;
                           bindings:
                               util: OneStringFromArray
                               params: ['Sales','Engineering','HR','Anonymous']
