--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G2_composite_fk_parent_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G2_composite_fk_parent_operations.yaml
@@ -106,57 +106,6 @@ microbenchmark:
             - ALTER TABLE employees_with_fk add CONSTRAINT fk_project foreign key (project_id, project_dept) references projects_with_part(id, dept) on delete cascade on update cascade;
             
         executeRules:
-            - workload: select_with_part
-              run:
-                  - name: select_with_part
-                    weight: 100
-                    queries:
-                        - query: SELECT * FROM projects_with_part where dept=?;
-                          bindings:
-                              util: OneStringFromArray
-                              params: ['Sales','Engineering','HR','Anonymous']
-
-            - workload: select_without_part
-              run:
-                  - name: select_without_part
-                    weight: 100
-                    queries:
-                        - query: SELECT * FROM projects_without_part where dept=?;
-                          bindings:
-                              util: OneStringFromArray
-                              params: ['Sales','Engineering','HR','Anonymous']
-                              
-            - workload: insert_with_part
-              run:
-                  - name: insert_with_part
-                    weight: 100
-                    queries:
-                        - query: insert into projects_with_part values(?,?,?,?);
-                          bindings:
-                              - util: PrimaryIntGen
-                                params: [10001, 500000]
-                              - util: RandomAString
-                                params: [1, 20]
-                              - util: OneStringFromArray
-                                params: ['Sales','Engineering','HR','Anonymous']
-                              - util: RandomDateBtwYears
-                                params: [2000,2025]
-            
-            - workload: insert_without_part
-              run:
-                  - name: insert_without_part
-                    weight: 100
-                    queries:
-                        - query: insert into projects_without_part values(?,?,?,?);
-                          bindings:
-                              - util: PrimaryIntGen
-                                params: [10001, 500000]
-                              - util: RandomAString
-                                params: [1, 20]
-                              - util: OneStringFromArray
-                                params: ['Sales','Engineering','HR','Anonymous']
-                              - util: RandomDateBtwYears
-                                params: [2000,2025]
 
             - workload: update_with_part
               run:
@@ -166,7 +115,7 @@ microbenchmark:
                         - query: update projects_with_part set dept=? where id=?;
                           bindings:
                             - util: OneStringFromArray
-                              params: ['Sales','Engineering','HR','Anonymous']
+                              params: [['Sales','Engineering','HR','Anonymous']]
                             - util: RandomInt
                               params: [1, 10000]
 
@@ -178,7 +127,7 @@ microbenchmark:
                         - query: update projects_without_part set dept=? where id=?;
                           bindings:
                             - util: OneStringFromArray
-                              params: ['Sales','Engineering','HR','Anonymous']
+                              params: [['Sales','Engineering','HR','Anonymous']]
                             - util: RandomInt
                               params: [1, 10000]
 
