--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G2_composite_fk_parent_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G2_composite_fk_parent_operations.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: {{username}}
-password: {{password}}
+url: jdbc:yugabytedb://172.151.19.247:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+username: yugabyte
+password: Password321!
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
@@ -22,41 +22,73 @@ microbenchmark:
     properties:
         setAutoCommit: false
         create:
-            - DROP TABLE IF EXISTS employees_with_fk;
-            - DROP TABLE IF EXISTS projects_with_part;
-            - DROP TABLE IF EXISTS projects_without_part;
+            - DROP TABLE IF EXISTS employees_with_part;
+            - DROP TABLE IF EXISTS employees_without_part;
 
-            - DROP TABLE IF EXISTS projects_sales;
-            - DROP TABLE IF EXISTS projects_eng;
-            - DROP TABLE IF EXISTS projects_hr;
-            - DROP TABLE IF EXISTS projects_default;
-            
+            - DROP TABLE IF EXISTS projects_with_part_with_fk;
+            - DROP TABLE IF EXISTS projects_with_part_without_fk;
+            - DROP TABLE IF EXISTS projects_without_part_with_fk;
+            - DROP TABLE IF EXISTS projects_without_part_without_fk;
 
-            - create table projects_with_part (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept)) PARTITION BY LIST (dept);
-            - CREATE TABLE projects_sales PARTITION OF projects_with_part FOR VALUES IN ('Sales');
-            - CREATE TABLE projects_eng PARTITION OF projects_with_part FOR VALUES IN ('Engineering');
-            - CREATE TABLE projects_hr PARTITION OF projects_with_part FOR VALUES IN ('HR');
-            - CREATE TABLE projects_default PARTITION OF projects_with_part DEFAULT;
+            - DROP TABLE IF EXISTS projects_sales1;
+            - DROP TABLE IF EXISTS projects_eng1;
+            - DROP TABLE IF EXISTS projects_hr1;
+            - DROP TABLE IF EXISTS projects_default1;
 
-            - create table projects_without_part (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept));
-            - create table employees_with_fk (id int primary key, name varchar(50) not null, project_id int, project_dept varchar(15), hired_at date);
+            - DROP TABLE IF EXISTS projects_sales2;
+            - DROP TABLE IF EXISTS projects_eng2;
+            - DROP TABLE IF EXISTS projects_hr2;
+            - DROP TABLE IF EXISTS projects_default2;
+
+            - DROP INDEX IF EXISTS fk_index1;
+            - DROP INDEX IF EXISTS fk_index2;
+
+            - create table projects_with_part_with_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept)) PARTITION BY LIST (dept);
+            - CREATE TABLE projects_sales1 PARTITION OF projects_with_part_with_fk FOR VALUES IN ('Sales');
+            - CREATE TABLE projects_eng1 PARTITION OF projects_with_part_with_fk FOR VALUES IN ('Engineering');
+            - CREATE TABLE projects_hr1 PARTITION OF projects_with_part_with_fk FOR VALUES IN ('HR');
+            - CREATE TABLE projects_default1 PARTITION OF projects_with_part_with_fk DEFAULT;
+
+            - create table projects_with_part_without_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept)) PARTITION BY LIST (dept);
+            - CREATE TABLE projects_sales2 PARTITION OF projects_with_part_without_fk FOR VALUES IN ('Sales');
+            - CREATE TABLE projects_eng2 PARTITION OF projects_with_part_without_fk FOR VALUES IN ('Engineering');
+            - CREATE TABLE projects_hr2 PARTITION OF projects_with_part_without_fk FOR VALUES IN ('HR');
+            - CREATE TABLE projects_default2 PARTITION OF projects_with_part_without_fk DEFAULT;
+
+            - create table projects_without_part_with_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept));
+            - create table projects_without_part_without_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept));
+
+            - create table employees_with_part (id int primary key, name varchar(50) not null, project_id int, project_dept varchar(15), hired_at date);
+            - create table employees_without_part (id int primary key, name varchar(50) not null, project_id int, project_dept varchar(15), hired_at date);
+
+            - create index fk_index1 on employees_with_part(project_id,project_dept);
+            - create index fk_index2 on employees_without_part(project_id,project_dept);
             
         cleanup:
-            - DROP TABLE IF EXISTS employees_with_fk;
-            - DROP TABLE IF EXISTS projects_with_part;
-            - DROP TABLE IF EXISTS projects_without_part;
+            - DROP TABLE IF EXISTS employees_with_part;
+            - DROP TABLE IF EXISTS employees_without_part;
 
-            - DROP TABLE IF EXISTS projects_sales;
-            - DROP TABLE IF EXISTS projects_eng;
-            - DROP TABLE IF EXISTS projects_hr;
-            - DROP TABLE IF EXISTS projects_default;
+            - DROP TABLE IF EXISTS projects_with_part_with_fk;
+            - DROP TABLE IF EXISTS projects_with_part_without_fk;
+            - DROP TABLE IF EXISTS projects_without_part_with_fk;
+            - DROP TABLE IF EXISTS projects_without_part_without_fk;
+
+            - DROP TABLE IF EXISTS projects_sales1;
+            - DROP TABLE IF EXISTS projects_eng1;
+            - DROP TABLE IF EXISTS projects_hr1;
+            - DROP TABLE IF EXISTS projects_default1;
+
+            - DROP TABLE IF EXISTS projects_sales2;
+            - DROP TABLE IF EXISTS projects_eng2;
+            - DROP TABLE IF EXISTS projects_hr2;
+            - DROP TABLE IF EXISTS projects_default2;
         loadRules:
-            - table: projects_with_part
-              rows: 100000
+            - table: projects_with_part_with_fk
+              rows: 100
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 100000]
+                    params: [1, 100]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -67,12 +99,12 @@ microbenchmark:
                     util: RandomDateBtwYears
                     params: [2000,2025]
 
-            - table: projects_without_part
-              rows: 100000
+            - table: projects_with_part_without_fk
+              rows: 100
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 100000]
+                    params: [1, 100]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -83,18 +115,69 @@ microbenchmark:
                     util: RandomDateBtwYears
                     params: [2000,2025]
 
-            - table: employees_with_fk
-              rows: 200000
+            - table: projects_without_part_with_fk
+              rows: 100
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 200000]
+                    params: [1, 100]
+                  - name: name
+                    util: RandomAString
+                    params: [1, 20]
+                  - name: dept
+                    util: SeqStringGenFromArray
+                    params: [['Sales','Engineering','HR','Anonymous']]
+                  - name: created_at
+                    util: RandomDateBtwYears
+                    params: [2000,2025]
+
+            - table: projects_without_part_without_fk
+              rows: 100
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params: [1, 100]
+                  - name: name
+                    util: RandomAString
+                    params: [1, 20]
+                  - name: dept
+                    util: SeqStringGenFromArray
+                    params: [['Sales','Engineering','HR','Anonymous']]
+                  - name: created_at
+                    util: RandomDateBtwYears
+                    params: [2000,2025]
+
+            - table: employees_with_part
+              rows: 1000
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params: [1, 1000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
                   - name: project_id
                     util: CyclicSeqIntGen
-                    params: [1,100000]
+                    params: [1,100]
+                  - name: project_dept
+                    util: SeqStringGenFromArray
+                    params: [['Sales','Engineering','HR','Anonymous']]
+                  - name: hired_at
+                    util: RandomDateBtwYears
+                    params: [2000,2025]
+
+            - table: employees_without_part
+              rows: 1000
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params: [1, 1000]
+                  - name: name
+                    util: RandomAString
+                    params: [1, 20]
+                  - name: project_id
+                    util: CyclicSeqIntGen
+                    params: [1,100]
                   - name: project_dept
                     util: SeqStringGenFromArray
                     params: [['Sales','Engineering','HR','Anonymous']]
@@ -103,50 +186,95 @@ microbenchmark:
                     params: [2000,2025]
 
         afterLoad:
-            - ALTER TABLE employees_with_fk add CONSTRAINT fk_project foreign key (project_id, project_dept) references projects_with_part(id, dept) on delete cascade on update cascade;
+            - ALTER TABLE employees_with_part add CONSTRAINT fk_project foreign key (project_id, project_dept) references projects_with_part_with_fk(id, dept) on delete cascade on update cascade;
+            - ALTER TABLE employees_without_part add CONSTRAINT fk_project foreign key (project_id, project_dept) references projects_without_part_with_fk(id, dept) on delete cascade on update cascade;
             
         executeRules:
 
-            - workload: update_with_part
+            - workload: update_with_part_with_fk
               run:
-                  - name: update_with_part
+                  - name: update_with_part_with_fk
                     weight: 100
                     queries:
-                        - query: update projects_with_part set dept=? where id=?;
+                        - query: update projects_with_part_with_fk set dept=? where id=?;
                           bindings:
                             - util: OneStringFromArray
                               params: [['Sales','Engineering','HR','Anonymous']]
-                            - util: RandomInt
-                              params: [1, 10000]
+                            - util: PrimaryIntGen
+                              params: [1, 100000]
 
-            - workload: update_without_part
+            - workload: update_with_part_without_fk
               run:
-                  - name: update_without_part
+                  - name: update_with_part_without_fk
                     weight: 100
                     queries:
-                        - query: update projects_without_part set dept=? where id=?;
+                        - query: update projects_with_part_without_fk set dept=? where id=?;
                           bindings:
                             - util: OneStringFromArray
                               params: [['Sales','Engineering','HR','Anonymous']]
-                            - util: RandomInt
-                              params: [1, 10000]
-
-            - workload: delete_with_part
+                            - util: PrimaryIntGen
+                              params: [1, 100000]
+            
+            - workload: update_without_part_with_fk
               run:
-                  - name: delete_with_part
+                  - name: update_without_part_with_fk
                     weight: 100
                     queries:
-                        - query: delete from projects_with_part where id=?;
+                        - query: update projects_without_part_with_fk set dept=? where id=?;
                           bindings:
-                            - util: RandomInt
-                              params: [1, 10000]
+                            - util: OneStringFromArray
+                              params: [['Sales','Engineering','HR','Anonymous']]
+                            - util: PrimaryIntGen
+                              params: [1, 100000]
 
-            - workload: delete_without_part
+            - workload: update_without_part_without_fk
               run:
-                  - name: delete_without_part
+                  - name: update_without_part_without_fk
                     weight: 100
                     queries:
-                        - query: delete from projects_without_part where id=?;
+                        - query: update projects_without_part_without_fk set dept=? where id=?;
                           bindings:
-                            - util: RandomInt
-                              params: [1, 10000]
+                            - util: OneStringFromArray
+                              params: [['Sales','Engineering','HR','Anonymous']]
+                            - util: PrimaryIntGen
+                              params: [1, 100000]
+
+            - workload: delete_with_part_with_fk
+              run:
+                  - name: delete_with_part_with_fk
+                    weight: 100
+                    queries:
+                        - query: delete from projects_with_part_with_fk where id=?;
+                          bindings:
+                            - util: PrimaryIntGen
+                              params: [1, 100000]
+
+            - workload: delete_with_part_without_fk
+              run:
+                  - name: delete_with_part_without_fk
+                    weight: 100
+                    queries:
+                        - query: delete from projects_with_part_without_fk where id=?;
+                          bindings:
+                            - util: PrimaryIntGen
+                              params: [1, 100000]
+                            
+            - workload: delete_without_part_with_fk
+              run:
+                  - name: delete_without_part_with_fk
+                    weight: 100
+                    queries:
+                        - query: delete from projects_without_part_with_fk where id=?;
+                          bindings:
+                            - util: PrimaryIntGen
+                              params: [1, 100000]
+
+            - workload: delete_without_part_without_fk
+              run:
+                  - name: delete_without_part_without_fk
+                    weight: 100
+                    queries:
+                        - query: delete from projects_without_part_without_fk where id=?;
+                          bindings:
+                            - util: PrimaryIntGen
+                              params: [1, 100000]
