--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G3_composite_fk_child_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G3_composite_fk_child_operations.yaml
@@ -24,6 +24,7 @@ microbenchmark:
         create:
             - DROP TABLE IF EXISTS employees_with_part;
             - DROP TABLE IF EXISTS employees_without_part;
+            - DROP TABLE IF EXISTS employees_without_fk;
             - DROP TABLE IF EXISTS projects_with_part;
             - DROP TABLE IF EXISTS projects_without_part;
 
@@ -42,9 +43,11 @@ microbenchmark:
 
             - create table employees_with_part (id int primary key, name varchar(50) not null, project_id int, project_dept varchar(15), hired_at date);
             - create table employees_without_part (id int primary key, name varchar(50) not null, project_id int, project_dept varchar(15), hired_at date);
+            - create table employees_without_fk (id int primary key, name varchar(50) not null, project_id int, project_dept varchar(15), hired_at date);
         cleanup:
             - DROP TABLE IF EXISTS employees_with_part;
             - DROP TABLE IF EXISTS employees_without_part;
+            - DROP TABLE IF EXISTS employees_without_fk;
             - DROP TABLE IF EXISTS projects_with_part;
             - DROP TABLE IF EXISTS projects_without_part;
 
@@ -123,6 +126,25 @@ microbenchmark:
                     util: RandomDateBtwYears
                     params: [2000,2025]
 
+            - table: employees_without_fk
+              rows: 1000000
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params: [1, 1000000]
+                  - name: name
+                    util: RandomAString
+                    params: [1, 20]
+                  - name: project_id
+                    util: CyclicSeqIntGen
+                    params: [1,100000]
+                  - name: project_dept
+                    util: SeqStringGenFromArray
+                    params: [['Sales','Engineering','HR','Anonymous']]
+                  - name: hired_at
+                    util: RandomDateBtwYears
+                    params: [2000,2025]
+
         afterLoad:
             - ALTER TABLE employees_with_part add CONSTRAINT fk_project foreign key (project_id, project_dept) references projects_with_part(id, dept) on delete cascade on update cascade;
             - ALTER TABLE employees_without_part add CONSTRAINT fk_project foreign key (project_id, project_dept) references projects_without_part(id, dept) on delete cascade on update cascade;
@@ -165,6 +187,24 @@ microbenchmark:
                               - util: RandomDateBtwYears
                                 params: [2000,2025]
 
+            - workload: insert_without_fk
+              run:
+                  - name: insert_without_fk
+                    weight: 100
+                    queries:
+                        - query: insert into employees_without_fk values(?,?,?,?,?);
+                          bindings:
+                              - util: PrimaryIntGen
+                                params: [1000001, 5000000]
+                              - util: RandomAString
+                                params: [1, 20]
+                              - util: CyclicSeqIntGen
+                                params: [1,100000]
+                              - util: SeqStringGenFromArray
+                                params: [['Sales','Engineering','HR','Anonymous']]
+                              - util: RandomDateBtwYears
+                                params: [2000,2025]
+
             - workload: update_with_part
               run:
                   - name: update_with_part
@@ -185,6 +225,20 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: update employees_without_part set project_id=?, project_dept=? where id=?;
+                          bindings:
+                            - util: PrimaryIntGen
+                              params: [1, 100000]
+                            - util: SeqStringGenFromArray
+                              params: [['Sales','Engineering','HR','Anonymous']]
+                            - util: RandomInt
+                              params: [1, 1000000]
+
+            - workload: update_without_fk
+              run:
+                  - name: update_without_fk
+                    weight: 100
+                    queries:
+                        - query: update employees_without_fk set project_id=?, project_dept=? where id=?;
                           bindings:
                             - util: PrimaryIntGen
                               params: [1, 100000]
